--- a/sass/components/_inc/_buttons.sass
+++ b/sass/components/_inc/_buttons.sass
@@ -65,6 +65,7 @@
 		&.hollow
 			border: 2px solid white
 			background: transparent
+			color: white
 		&:hover
 			background: darken(white, 5%)
 
