--- a/sass/components/_inc/_form.sass
+++ b/sass/components/_inc/_form.sass
@@ -8,7 +8,8 @@ input[type="submit"]
 .form-group
 	margin-bottom: sizes(base)
 
-$height-form-element: 52px
+$height-form-element: rem(52px)
+$height-form-element: $size-nav-height
 
 .checkbox
 	+clearfix
