--- a/sass/components/_inc/_grid.sass
+++ b/sass/components/_inc/_grid.sass
@@ -5,6 +5,10 @@ $size-grid-gutter: 															sizes(base)
 // Idea?
 $screen-padding: null 
 
+=grid($value)
+	float: left
+	width: (100% / $column-numbers) * $value
+
 
 section
 	&.padded
