--- a/sass/components/_inc/_navigation.sass
+++ b/sass/components/_inc/_navigation.sass
@@ -81,8 +81,8 @@ section
 				text-transform: uppercase
 				letter-spacing: 1px
 				color: white
-				height: 60px
-				line-height: 60px
+				height: $size-nav-height
+				line-height: $size-nav-height
 				cursor: pointer
 				font-size: rem(12px) !important
 				font-weight: 600
