--- a/sass/components/_inc/_normalise.sass
+++ b/sass/components/_inc/_normalise.sass
@@ -20,6 +20,7 @@ time, mark, audio, video
 	vertical-align: baseline
 
 html
+	font-family: $font-family-primary
 	font-size: 14px // This is the only case where px unit is used
 	line-height: 1
 	color: colours(greyscale, dark)
