--- a/sass/_default-theme.scss
+++ b/sass/_default-theme.scss
@@ -35,4 +35,4 @@ $colors: (
 
 $drop-shadow: 													0 2px 3px rgba(231,231,231,0.50);
 $color-keyline-light: 									#EDEDED;
-$font-family-primary: 'proxima nova', Helvetica, Arial, sans-serif ;
+$font-family-primary: 'proxima nova', 'proxima-nova', Helvetica, Arial, sans-serif ;
